// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`AssignPoliciesModal expect not to render anything for a closed modal 1`] = `
<Modal
  actions={
    Array [
      <SubmitPoliciesButton
        aria-label="save"
        dispatch={[Function]}
        policyIds={Array []}
        systemId="1"
        toggle={[MockFunction]}
        variant="primary"
      />,
      <Button
        aria-label="cancel"
        onClick={[Function]}
        variant="secondary"
      >
        Cancel
      </Button>,
    ]
  }
  appendTo={[Function]}
  aria-describedby=""
  aria-label=""
  aria-labelledby=""
  className=""
  hasNoBodyWrapper={false}
  isOpen={false}
  onClose={[Function]}
  ouiaSafe={true}
  showClose={true}
  title="Edit policies for myhost"
  variant="small"
/>
`;

exports[`AssignPoliciesModal expect to render an open modal without error 1`] = `
<Modal
  actions={
    Array [
      <SubmitPoliciesButton
        aria-label="save"
        dispatch={[Function]}
        policyIds={Array []}
        systemId="1"
        toggle={[MockFunction]}
        variant="primary"
      />,
      <Button
        aria-label="cancel"
        onClick={[Function]}
        variant="secondary"
      >
        Cancel
      </Button>,
    ]
  }
  appendTo={[Function]}
  aria-describedby=""
  aria-label=""
  aria-labelledby=""
  className=""
  hasNoBodyWrapper={false}
  isOpen={true}
  onClose={[Function]}
  ouiaSafe={true}
  showClose={true}
  title="Edit policies for myhost"
  variant="small"
/>
`;

exports[`AssignPoliciesModal renders empty state if no OS is matching the system 1`] = `
<Modal
  actions={
    Array [
      <SubmitPoliciesButton
        aria-label="save"
        dispatch={[Function]}
        policyIds={Array []}
        systemId="1"
        toggle={[MockFunction]}
        variant="primary"
      />,
      <Button
        aria-label="cancel"
        onClick={[Function]}
        variant="secondary"
      >
        Cancel
      </Button>,
    ]
  }
  appendTo={[Function]}
  aria-describedby=""
  aria-label=""
  aria-labelledby=""
  className=""
  hasNoBodyWrapper={false}
  isOpen={[Function]}
  onClose={[Function]}
  ouiaSafe={true}
  showClose={true}
  title="Edit policies for myhost"
  variant="small"
/>
`;
